# camelyon-utils

./: .gitignore  NOTICE  README.md  pyproject.toml
camelyon_utils/: __init__.py  __main__.py  main.py
camelyon_utils/merge_hdf5/: __main__.py  main.py
camelyon_utils/slide_tiles/: main.py  main_core.py  preprocessing.py  resolution_utilities.py
camelyon_utils/slide_tiles/test/: manual_tests.ipynb
examples/: example_merge.sh  example_process_normal.sh  example_process_tumor.sh
